--- a/public/404.html
+++ b/public/404.html
@@ -1,15 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <title>Single Page Apps for GitHub Pages</title>
-    <script type="text/javascript">
-      (function() {
-        var redirect = window.location.pathname + window.location.search + window.location.hash;
-        window.location.href = '/React-FakeStore2025/#' + redirect;
-      })();
-    </script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="refresh" content="0; url=/index.html" />
   </head>
   <body>
+    Redirecting...
   </body>
 </html>
